--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -43,7 +43,7 @@
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.frontendmentor.io/profile/amiralamf4">AMIR ALAM</a>.
+    Coded by <a href="https://github.com/amiralamf4/JAVASCRIPT-CHALLENGE/tree/main/interactive-rating-component-main">AMIR ALAM</a>.
     </div>
 
     
@@ -51,5 +51,5 @@
 
   <script src="script.js"></script>
 
-</body>
+</body>   
 </html>
