GitHub Api color theme changed

--- a/Github_API/index.html
+++ b/Github_API/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
     <link rel="icon" type="image/png" sizes="64x64" href="./image/A.png">
-    <title>API||AMIR ALAM</title>
+    <title>API|AMIR ALAM</title>
 </head>
 <body>
     <main>
@@ -14,10 +16,15 @@
         <section class="result">
             <div class="slide1">
                 <div class="image">
-                    <img  src="https://i.pinimg.com/564x/30/8b/b8/308bb89fafbc4472de23fab93db67585.jpg" id="pic" alt="">
-                    
-                </div>
+                    <img  src="./image/avtaar.png" id="pic" alt="">
+                </div>         
+                <div class="icon">
+                    <a href="#"><i class="ri-instagram-line"></i></a>
+                    <a href="#"><i class="ri-facebook-circle-line"></i></a>
+                    <a href="#"><i class="ri-github-line"></i></a>
+                </div>       
                 
+
             </div>
             <div class="slide2">
                 <h2>Guide</h2>
@@ -26,6 +33,6 @@
             </div>
         </section>
     </main>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
