GitHub Api with social-media feature and some small changes in gussing game

--- a/Github_API/index.html
+++ b/Github_API/index.html
@@ -19,9 +19,8 @@
                     <img  src="./image/avtaar.png" id="pic" alt="">
                 </div>         
                 <div class="icon">
-                    <a href="#"><i class="ri-instagram-line"></i></a>
-                    <a href="#"><i class="ri-facebook-circle-line"></i></a>
-                    <a href="#"><i class="ri-github-line"></i></a>
+                    <a id="x" href="#"><i class="ri-twitter-line"></i></i></a>
+                    <a id="github" href="#"><i class="ri-github-line"></i></a>
                 </div>       
                 
 
