--- a/BMI Calculator/index.html
+++ b/BMI Calculator/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="64x64" href="./image/A.png">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>BMI Calculator</title>
 </head>
 <body>
     <div class="holder">
